Group parameters are not interactive #37842

Closed
opened 2013-12-17 22:32:36 +01:00 by Cenek Strichel · 8 comments

System Information
W8.1 64b, GForce 250GTS

Blender Version
d963412

Short description of error
Groups parameter (Dupli visibility and Offset X, Y, Z) are not interactive in viewport. It is done when you click to object, but not during changing parameters. So it is not so interactive.

Exact steps for others to reproduce the error
1] create some cubes
2] group it
3] add new group as instance
4] change some Groups parameters (Dupli visibility or X, Y, Z)
5] nothing change until you select object or change 3D cursor.

**System Information** W8.1 64b, GForce 250GTS **Blender Version** d963412 **Short description of error** Groups parameter (Dupli visibility and Offset X, Y, Z) are not interactive in viewport. It is done when you click to object, but not during changing parameters. So it is not so interactive. **Exact steps for others to reproduce the error** 1] create some cubes 2] group it 3] add new group as instance 4] change some Groups parameters (Dupli visibility or X, Y, Z) 5] nothing change until you select object or change 3D cursor.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Cenda

Added subscriber: @Cenda

Added subscriber: @brecht

Added subscriber: @brecht

Fixed, thanks for the report.

Fixed, thanks for the report.

This issue was referenced by blender/blender-addons-contrib@90b831dc09

This issue was referenced by blender/blender-addons-contrib@90b831dc097f78114634c464a216663724719e81

This issue was referenced by 90b831dc09

This issue was referenced by 90b831dc097f78114634c464a216663724719e81

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 90b831dc09.

Closed by commit 90b831dc09.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37842
No description provided.