Fix T37842: missing 3D view redraw when editing group layers and offset.